--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Ignore these files too
+.DS_Store
+.idea/
+app/.DS_Store
+app/views/.DS_Store
+public/.DS_Store
