Ignore frozenstringliteralcomment for now

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,9 @@ Layout/TrailingBlankLines:
 Style/StringLiterals:
   Enabled: false
 
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
 Layout/SpaceAroundOperators:
   AllowForAlignment: false
 
