--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ public/.DS_Store
 public/images/*
 
 Gemfile.lock
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
