Updates to ebextensions

--- a/.ebextensions/01_commands.config
+++ b/.ebextensions/01_commands.config
@@ -1,5 +1,5 @@
 commands:
   01_download_elasticsearch:
-    command: wget -qO - https://artifacts.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add -
+    command: wget https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-1.7.3.noarch.rpm
   02_install_elasticsearch:
-    command: rpm --import https://artifacts.elastic.co/GPG-KEY-elasticsearch
+    command: sudo rpm -ivh elasticsearch-1.7.3.noarch.rpm
