--- a/.ebextensions/01_commands.config
+++ b/.ebextensions/01_commands.config
@@ -2,4 +2,4 @@ commands:
   01_download_elasticsearch:
     command: wget https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-1.7.3.noarch.rpm
   02_install_elasticsearch:
-    command: sudo rpm -ivh elasticsearch-1.7.3.noarch.rpm
+    command: sudo rpm -ivh elasticsearch-1.7.3.noarch.rpm || true
