--- a/.ebextensions/01_commands.config
+++ b/.ebextensions/01_commands.config
@@ -3,3 +3,5 @@ commands:
     command: wget https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-1.7.3.noarch.rpm
   02_install_elasticsearch:
     command: sudo rpm -ivh elasticsearch-1.7.3.noarch.rpm || true
+  03_start_elasticsearch:
+    command: sudo service elasticsearch start
